fix(client): adjust selection button alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,13 +79,13 @@ time {
 }
 
 .button-selection {
-  margin: 5px auto;
-  margin-top: 0px;
+  margin-bottom: 5px;
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: left;
+  max-width: 500px;
 }
 
 .primary {
@@ -502,7 +502,6 @@ p {
   }
 
   .button-selection {
-    justify-content: space-between;
     width: 100%;
   }
 
